test+fix: make monitoring snapshot status lists immutable
MonitoringSnapshot의 activeOrdersByStatus value List가 가변이었던 문제 수정.
compact constructor에서 EnumMap + List.copyOf() deep copy로 완전 불변성 확보.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>